--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@
                 <div class="hero-text">
                     <p class="hero-greeting">你好，我是</p>
                     <h1 class="hero-name">叶山子</h1>
-                    <h2 class="hero-title">我正在寻找前端/后端开发实习<</h2>
+                    <h2 class="hero-title">我正在寻找前端/后端开发实习</h2>
                     <p class="hero-desc">
                         卡尔加里大学软件工程专业应届毕业生，即将攻读香港中文大学信息工程硕士学位。曾在苏州西门子电器有限公司实习，熟悉前后端技术栈，擅长微服务架构设计和云平台部署，寻求深圳/苏州地区的开发实习机会。
                     </p>
