--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
                         在苏州西门子电器有限公司实习期间，我参与了企业文档管理系统和考勤系统的开发，积累了丰富的实际项目经验。我熟悉现代前后端技术栈，包括Django、Node.js、Angular和Vue.js等框架，同时对Docker容器化和云平台部署有深入了解。
                     </p>
                     <p class="about-desc">
-                        我对计算机视觉和机器学习领域有浓厚兴趣，参与多语言文本分类与迁移学习研究，能够与团队保持良好互动并共同达成目标。
+                        本人具备良好的计算机基础与较强的问题解决能力，同时英语沟通水平出色，能熟练进行口语与书面交流；能与团队成员保持良好互动并共同达成目标，工作效率高，具备良好的抗压能力；对计算机视觉和机器学习领域有浓厚兴趣，并积极学习相关技术
                     </p>
                     <div class="about-info">
                         <div class="info-item">
