--- a/index.html
+++ b/index.html
@@ -2007,8 +2007,7 @@
             <div class="about-content">
                 <div class="profile-card" data-tilt data-tilt-max="10">
                     <div class="profile-img">
-                        <!-- 替换为下面的代码 -->
-                        <img src="https://img.freepik.com/free-vector/cute-cool-boy-dabbing-pose-cartoon-vector-icon-illustration-people-fashion-icon-concept-isolated_138676-5680.jpg" alt="叶山子" />
+                        <img src="https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fsafe-img.xhscdn.com%2Fbw1%2Fc9c1624d-94f2-4b3b-9fc6-c7802cbb7763%3FimageView2%2F2%2Fw%2F1080%2Fformat%2Fjpg&refer=http%3A%2F%2Fsafe-img.xhscdn.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=auto?sec=1743734367&t=abac0b4571890a9408cebdc7bcc110da" alt="叶山子" style="object-fit: cover; object-position: center top; width: 100%; height: 100%;" />
                     </div>
                 </div>
                 <div class="about-text">
