--- a/index.html
+++ b/index.html
@@ -2438,12 +2438,12 @@
                         <div class="semester">
                             <ul class="course-list">
                                 <li><span class="course-code">CPSC 441</span> 计算机网络</li>
-                                <li><span class="course-code">ENCM 511</span> 嵌入式系统接口</li>
+                                <li><span class="course-code">ENCM 511</span> 嵌入式系统</li>
                                 <li><span class="course-code">ENSF 480</span> 软件设计原则</li>
                                 <li><span class="course-code">ENSF 545</span> 虚拟现实导论</li>
                                 <li><span class="course-code">SENG 401</span> 软件架构</li>
                                 <li><span class="course-code">SENG 438</span> 软件测试与质量保证</li>
-                                <li><span class="course-code">SENG 471</span> 软件需求工程</li>
+                                <li><span class="course-code">SENG 471</span> 软件需求</li>
                                 <li><span class="course-code">SENG 533</span> 软件性能评估</li>
   
                             </ul>
